tests/invalid/type/super_no_parent.pts
prototype A {
    function touch() : void {
        super.clone();
    }
}
